@@ -75,7 +75,7 @@ Below is a description of the attributes for each tag.
  * '''runasuser''' - The user to run the instance as.  Note that a configuration file must be readable by this user and the various "temp" directories (usually under /usr/local/firstworks/var/sqlrelay) must be writable by this user.  If this parameter is set to a user other than the user who runs sqlr-start, then unless sqlr-start is run as root, it will not be possible to switch to this user and the following warning will be displayed: <i>Warning: could not change user to '''user'''.</i>  Defaults to "nobody".
  * '''runasgroup''' - The group to run the instance as.  Note that a configuration file must be readable by this group and the various "temp" directories (usually under /usr/local/firstworks/var/sqlrelay) must be writable by this group.  If this parameter is set to a group other than a group that the user who runs sqlr-start belongs to, then unless sqlr-start is run as root, it will not be possible to switch to this group and the following warning will be displayed: <i>Warning: could not change group to '''group'''.</i>  Defaults to "nobody".
  * '''cursors''' - The number of database cursors to open and maintain for each database connection.  More cursors may be opened if needed, but the pool of cursors will shrink back down to this size at the end of each client session.  This may be set to any positive number or 0.  Defaults to 1.
- * '''maxcursors''' - The maximum number of database cursors that may be opened for a single client session.  If this is set to a number lower than the value for the '''cursors''' parameter then it will be automatically bumped up to the value set for '''cursors'''.  Defaults to 2, or the same value as '''cursors''', whichever is greater.
+ * '''maxcursors''' - The maximum number of database cursors that may be opened for a single client session.  If this is set to a number lower than the value for the '''cursors''' parameter then it will be automatically bumped up to the value set for '''cursors'''.  Defaults to 5, or the same value as '''cursors''', whichever is greater.
  * '''cursors_growby''' - The number of new cursors that will be opened at a time when new cursors are required.  Defaults to 1.
  * '''authtier''' - Where to authenticate.  Can be set to "connection", "database", or "proxied".  Defaults to connection, which implements [configguide.html# User List Auth].  See [configguide.html@userlistauth User List Auth], [configguide.html#dbauth Database Auth] and [configguide.html#proxiedauth Proxied Auth] in the configuration guide for more information.
  * '''sessionhandler''' - Method used by the listener to handle a client session.  Options are either "thread" (the default as of version 0.58) or "process".  When a client connects to the listener, a child is forked to handle the connection.  The child can be either a process or a thread.  Threads should perform better but aren't supported on all platforms.  Defaults to "thread" (as of version 0.58).
