@@ -36,6 +36,7 @@
 		it with each prepare
 	made column-lookup by name case sensitive to improve performance
 	fixed nagle-disable and sizing of socket read/write buffers
+	changed default maxcursors to 5
 
 0.67.0 - general documenation clean-up
 	added missing all: target to man/Makefile
